lib/pluviora_bindings_generated.dart

/// @nodoc
library;

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import, unused_element, deprecated_member_use_from_same_package
import 'dart:ffi' as ffi;

@ffi.Native<ffi.Uint32 Function()>()
external int pluviora_abi_version();

@ffi.Native<PluvioraHandle Function()>()
external PluvioraHandle pluviora_create();

@ffi.Native<PluvioraStatus Function(PluvioraHandle)>()
external int pluviora_destroy(PluvioraHandle handle);

@ffi.Native<
  PluvioraStatus Function(PluvioraHandle, ffi.Pointer<PluvioraMetadataView>)
>()
external int pluviora_get_metadata(
  PluvioraHandle handle,
  ffi.Pointer<PluvioraMetadataView> out_metadata,
);

@ffi.Native<ffi.Pointer<ffi.Char> Function(PluvioraHandle)>()
external ffi.Pointer<ffi.Char> pluviora_last_error(PluvioraHandle handle);

@ffi.Native<
  PluvioraStatus Function(
    PluvioraHandle,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
  )
>()
external int pluviora_load(
  PluvioraHandle handle,
  ffi.Pointer<ffi.Uint8> json_data,
  int json_length,
  ffi.Pointer<ffi.Uint8> js_data,
  int js_length,
);

@ffi.Native<
  PluvioraStatus Function(
    PluvioraHandle,
    ffi.Double,
    ffi.Float,
    ffi.Float,
    ffi.Double,
    ffi.Pointer<PluvioraFrameView>,
  )
>()
external int pluviora_render(
  PluvioraHandle handle,
  double time_seconds,
  double width,
  double height,
  double song_length,
  ffi.Pointer<PluvioraFrameView> out_frame,
);

@ffi.Native<PluvioraStatus Function(PluvioraHandle, ffi.Double)>()
external int pluviora_set_flow_speed(PluvioraHandle handle, double speed);

@ffi.Native<
  PluvioraStatus Function(PluvioraHandle, ffi.Pointer<ffi.Uint8>, ffi.Size)
>()
external int pluviora_set_font_data(
  PluvioraHandle handle,
  ffi.Pointer<ffi.Uint8> font_data,
  int font_length,
);

@ffi.Native<PluvioraStatus Function(PluvioraHandle, ffi.Double)>()
external int pluviora_set_note_scale(PluvioraHandle handle, double scale);

@ffi.Native<ffi.Pointer<ffi.Char> Function(PluvioraHandle, ffi.Uint32)>()
external ffi.Pointer<ffi.Char> pluviora_warning_at(
  PluvioraHandle handle,
  int index,
);

@ffi.Native<ffi.Uint32 Function(PluvioraHandle)>()
external int pluviora_warning_count(PluvioraHandle handle);

const int PLUVIORA_ABI_VERSION = 1;

const int PLUVIORA_CHART_ERROR = 4;

const int PLUVIORA_INTERNAL_ERROR = 255;

const int PLUVIORA_INVALID_ARGUMENT = 1;

const int PLUVIORA_INVALID_HANDLE = 2;

const int PLUVIORA_JSON_ERROR = 3;

const int PLUVIORA_NOT_LOADED = 5;

const int PLUVIORA_OK = 0;

enum PluvioraCommandType {
  PLUVIORA_COMMAND_RECT(1),
  PLUVIORA_COMMAND_QUAD(2),
  PLUVIORA_COMMAND_SPRITE(3),
  PLUVIORA_COMMAND_NOTE(4),

  /// Command values 5 and 6 are reserved by ABI v1.
  PLUVIORA_COMMAND_HIT_RING(7),
  PLUVIORA_COMMAND_PARTICLE(8),
  PLUVIORA_COMMAND_TEXT_BITMAP(9);

  final int value;
  const PluvioraCommandType(this.value);

  static PluvioraCommandType fromValue(int value) => switch (value) {
    1 => PLUVIORA_COMMAND_RECT,
    2 => PLUVIORA_COMMAND_QUAD,
    3 => PLUVIORA_COMMAND_SPRITE,
    4 => PLUVIORA_COMMAND_NOTE,
    7 => PLUVIORA_COMMAND_HIT_RING,
    8 => PLUVIORA_COMMAND_PARTICLE,
    9 => PLUVIORA_COMMAND_TEXT_BITMAP,
    _ => throw ArgumentError('Unknown value for PluvioraCommandType: $value'),
  };
}

final class PluvioraFrameView extends ffi.Struct {
  external ffi.Pointer<ffi.Uint8> data;

  @ffi.Uint32()
  external int length;

  @ffi.Uint32()
  external int capacity;

  @ffi.Uint32()
  external int command_count;

  @ffi.Uint32()
  external int hit_count;

  @ffi.Uint32()
  external int drag_count;

  @ffi.Uint32()
  external int fracture_count;

  @ffi.Uint32()
  external int reserved;

  static ffi.Pointer<PluvioraFrameView> $allocate(
    ffi.Allocator $allocator, {
    required ffi.Pointer<ffi.Uint8> data,
    required int length,
    required int capacity,
    required int command_count,
    required int hit_count,
    required int drag_count,
    required int fracture_count,
    required int reserved,
  }) => $allocator<PluvioraFrameView>()
    ..ref.data = data
    ..ref.length = length
    ..ref.capacity = capacity
    ..ref.command_count = command_count
    ..ref.hit_count = hit_count
    ..ref.drag_count = drag_count
    ..ref.fracture_count = fracture_count
    ..ref.reserved = reserved;
}

typedef PluvioraHandle = ffi.Pointer<ffi.Void>;

final class PluvioraMetadataView extends ffi.Struct {
  external ffi.Pointer<ffi.Char> title;

  external ffi.Pointer<ffi.Char> composer;

  external ffi.Pointer<ffi.Char> illustrator;

  external ffi.Pointer<ffi.Char> beatmapper;

  external ffi.Pointer<ffi.Char> difficulty;

  external ffi.Pointer<ffi.Char> audio_file;

  external ffi.Pointer<ffi.Char> illustration_file;

  @ffi.Double()
  external double difficulty_value;

  @ffi.Double()
  external double chart_duration;

  @ffi.Uint32()
  external int line_count;

  @ffi.Uint32()
  external int note_count;

  @ffi.Uint32()
  external int animation_count;

  @ffi.Uint32()
  external int storyboard_count;

  @ffi.Uint64()
  external int content_hash;

  static ffi.Pointer<PluvioraMetadataView> $allocate(
    ffi.Allocator $allocator, {
    required ffi.Pointer<ffi.Char> title,
    required ffi.Pointer<ffi.Char> composer,
    required ffi.Pointer<ffi.Char> illustrator,
    required ffi.Pointer<ffi.Char> beatmapper,
    required ffi.Pointer<ffi.Char> difficulty,
    required ffi.Pointer<ffi.Char> audio_file,
    required ffi.Pointer<ffi.Char> illustration_file,
    required double difficulty_value,
    required double chart_duration,
    required int line_count,
    required int note_count,
    required int animation_count,
    required int storyboard_count,
    required int content_hash,
  }) => $allocator<PluvioraMetadataView>()
    ..ref.title = title
    ..ref.composer = composer
    ..ref.illustrator = illustrator
    ..ref.beatmapper = beatmapper
    ..ref.difficulty = difficulty
    ..ref.audio_file = audio_file
    ..ref.illustration_file = illustration_file
    ..ref.difficulty_value = difficulty_value
    ..ref.chart_duration = chart_duration
    ..ref.line_count = line_count
    ..ref.note_count = note_count
    ..ref.animation_count = animation_count
    ..ref.storyboard_count = storyboard_count
    ..ref.content_hash = content_hash;
}

enum PluvioraNoteKind {
  PLUVIORA_NOTE_TAP(0),
  PLUVIORA_NOTE_HOLD(1),
  PLUVIORA_NOTE_DRAG(2),
  PLUVIORA_NOTE_FRACTURE(3);

  final int value;
  const PluvioraNoteKind(this.value);

  static PluvioraNoteKind fromValue(int value) => switch (value) {
    0 => PLUVIORA_NOTE_TAP,
    1 => PLUVIORA_NOTE_HOLD,
    2 => PLUVIORA_NOTE_DRAG,
    3 => PLUVIORA_NOTE_FRACTURE,
    _ => throw ArgumentError('Unknown value for PluvioraNoteKind: $value'),
  };
}

enum PluvioraSpriteKind {
  PLUVIORA_SPRITE_LINE_HEAD(0),
  PLUVIORA_SPRITE_PAUSE(1);

  final int value;
  const PluvioraSpriteKind(this.value);

  static PluvioraSpriteKind fromValue(int value) => switch (value) {
    0 => PLUVIORA_SPRITE_LINE_HEAD,
    1 => PLUVIORA_SPRITE_PAUSE,
    _ => throw ArgumentError('Unknown value for PluvioraSpriteKind: $value'),
  };
}

typedef PluvioraStatus = ffi.Uint32;
typedef DartPluvioraStatus = int;
